log
Tue 13 Sep 2022 01:21:00 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
5f2c0ab
Tue 13 Sep 2022 01:24:32 AM UTC: 
 heap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
365235f
Tue 13 Sep 2022 01:25:43 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
3c25abc
Tue 13 Sep 2022 01:45:14 AM UTC: 
 heap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:54:55: error: ‘youngax’ undeclared (first use in this function); did you mean ‘younga’?
   54 |     if (pq->heapArray[asize].priority < pq->heapArray[youngax].priority && pq->heapArray[younga].priority > pq->heapArray[olda].priority){
      |                                                       ^~~~~~~
      |                                                       younga
heap.c:54:55: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ddadf8e
Tue 13 Sep 2022 01:45:25 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
3afb8fc
Tue 13 Sep 2022 02:14:28 AM UTC: 
 heap.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
c2ff85b
Tue 13 Sep 2022 02:15:53 AM UTC: 
 heap.c | 59 ++++++++++++++++-------------------------------------------
 1 file changed, 16 insertions(+), 43 deletions(-)
 tests:  7|1
total_score: 60/70
f37b6b0
